[Bug/2] clean up

--- a/frontend/src/app/core/login/login.component.html
+++ b/frontend/src/app/core/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="container-fluid mt-5">
   <div class="text-center mt-2">
     <h2>{{ 'login.title' | translate }}</h2>
   </div>
@@ -20,5 +20,3 @@
     </div>
   </form>
 </div>
-
-
