--- a/frontend/src/app/features/settings/settings.component.html
+++ b/frontend/src/app/features/settings/settings.component.html
@@ -1,1 +1,10 @@
-<p>user-settings-view works!</p>
+<div class="container-fluid">
+  <div class="mt-5 mb-4">
+    <div class="col">
+      <h2>{{'settings.title' | translate}}</h2>
+    </div>
+  </div>
+  <div class="mt-2 p-3 border rounded">
+    <ms-change-password/>
+  </div>
+</div>
