--- a/frontend/src/app/core/layout/header/header.component.html
+++ b/frontend/src/app/core/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-light">
+<nav class="navbar navbar-expand-lg bg-light shadow-sm">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
