[Feature/21] Bug/Feature Report Page + Header Logo

--- a/frontend/src/app/features/home/home.component.html
+++ b/frontend/src/app/features/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
-  <div class="justify-content-center mt-5 mb-5">
+  <div class="justify-content-center mb-5">
     <div class="col text-center">
       <h2>{{ 'home.title' | translate }} {{ user.firstName }}</h2>
     </div>
