--- a/frontend/src/app/core/layout/header/header.component.html
+++ b/frontend/src/app/core/layout/header/header.component.html
@@ -1,9 +1,11 @@
-<nav class="navbar navbar-expand-lg bg-light shadow-sm">
-  <div class="container-fluid">
+<nav class="navbar navbar-expand-lg bg-light shadow-sm mb-5">
+  <div class="container">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler"
             aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
+
+    <p-image src="assets/img/fhooe-logo.png" alt="Image" width="85px"/>
 
     <div class="collapse navbar-collapse justify-content-center" id="navbarToggler">
       <ul class="nav nav-pills">
@@ -29,6 +31,14 @@
              routerLinkActive="active">
             <i class="pi pi-cog"></i>
             {{ 'header.btn-settings' | translate }}
+          </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link"
+             routerLink="/report"
+             routerLinkActive="active">
+            <i class="pi pi-wrench"></i>
+            {{ 'header.btn-report' | translate }}
           </a>
         </li>
       </ul>
