--- a/frontend/src/app/features/settings/settings.component.html
+++ b/frontend/src/app/features/settings/settings.component.html
@@ -1,9 +1,6 @@
-<div class="container-fluid">
-  <div class="mt-5 mb-4">
-    <div class="col">
-      <h2>{{'settings.title' | translate }}</h2>
-    </div>
-  </div>
+<h2>{{ 'settings.title' | translate }}</h2>
+
+<div class="container mt-4">
   <div class="mt-2 p-3 border rounded">
     <ms-change-password/>
   </div>
