[Bug/24] Edit Page + footer + de.json

--- a/frontend/src/app/features/course/edit-view/edit-view.component.html
+++ b/frontend/src/app/features/course/edit-view/edit-view.component.html
@@ -2,14 +2,16 @@
 <p-confirmDialog></p-confirmDialog>
 
 <div class="row">
-  <div class="col-6">
+  <div class="col-5">
+    <h2>{{ 'edit.title-students' | translate }}</h2>
     <ms-edit-group [groupedStudents]="groupedStudents"></ms-edit-group>
   </div>
 
-  <div class="col-6">
+  <div class="col-7">
+    <h2>{{ 'edit.title-partition' | translate }}</h2>
     <ms-edit-partition [partition]="partition" [groups]="groups"></ms-edit-partition>
   </div>
 </div>
 <div class="text-center">
-  <p-button label="{{ 'course.editView.btn-save' | translate }}" class="mt-2 mb-5 m-1" (click)="onSaveBtnClick()" size="small"></p-button>
+  <p-button label="{{ 'common.btn-save' | translate }}" class="mt-2 mb-5 m-1" (click)="onSaveBtnClick()" size="small"></p-button>
 </div>
