--- a/frontend/src/app/features/home/admin-home/degree-program-form/degree-program-form.component.html
+++ b/frontend/src/app/features/home/admin-home/degree-program-form/degree-program-form.component.html
@@ -24,6 +24,6 @@
   </div>
 
   <div class="col-12 text-center">
-    <p-button label="{{ 'home.adminHome.degreeProgramForm.btn-submit' | translate }}" size="small" type="submit"></p-button>
+    <p-button label="{{ 'common.btn-submit' | translate }}" size="small" type="submit"></p-button>
   </div>
 </form>
