--- a/frontend/src/app/features/home/admin-home/degree-program-list/degree-program-list.component.html
+++ b/frontend/src/app/features/home/admin-home/degree-program-list/degree-program-list.component.html
@@ -24,5 +24,5 @@
   </tbody>
 </table>
 <div class="text-center">
-  <p-button label="{{ 'home.adminHome.degreeProgramList.btn-save' | translate }}" size="small"></p-button>
+  <p-button label="{{ 'common.btn-save' | translate }}" size="small"></p-button>
 </div>
