--- a/frontend/src/app/features/home/admin-home/user-list/user-list.component.html
+++ b/frontend/src/app/features/home/admin-home/user-list/user-list.component.html
@@ -23,6 +23,6 @@
   </tbody>
 </table>
 <div class="text-center">
-  <p-button label="{{ 'home.adminHome.userList.btn-save' | translate }}" size="small"
+  <p-button label="{{ 'common.btn-save' | translate }}" size="small"
             (click)="onActivitySave()"></p-button>
 </div>
