--- a/frontend/src/app/features/report/report.component.html
+++ b/frontend/src/app/features/report/report.component.html
@@ -22,7 +22,7 @@
   </div>
 
   <p-button type="submit"
-            label="{{ 'report.submit' | translate }}"
+            label="{{ 'common.btn-submit' | translate }}"
             [disabled]="title === '' || description === '' || selection === ''"
             size="small"
             (onClick)="onSubmit()"
