--- a/frontend/src/app/shared/forms/user-form/user-form.component.html
+++ b/frontend/src/app/shared/forms/user-form/user-form.component.html
@@ -14,7 +14,7 @@
   </div>
 
   <div class="col-md-4">
-    <label for="username" class="form-label">{{ 'shared.forms.userForm.lbl-username' | translate }}</label>
+    <label for="username" class="form-label">{{ 'common.lbl-username' | translate }}</label>
     <div class="input-group has-validation">
       <input type="text" class="form-control" id="username" formControlName="username" required>
     </div>
@@ -36,6 +36,6 @@
   </div>
 
   <div class="col-12 text-center">
-    <p-button label="{{ 'shared.forms.userForm.btn-submit' | translate }}" size="small" type="submit"></p-button>
+    <p-button label="{{ 'common.btn-submit' | translate }}" size="small" type="submit"></p-button>
   </div>
 </form>
