--- a/frontend/src/app/core/login/login.component.html
+++ b/frontend/src/app/core/login/login.component.html
@@ -5,7 +5,7 @@
   <form (ngSubmit)="onSubmit()" #loginForm="ngForm">
     <div class="form-group row mb-3 justify-content-center">
       <div class="col-8 col-xs-8 col-sm-8 col-md-6 col-lg-4">
-        <label for="username">{{ 'login.lbl-username' | translate }}:</label>
+        <label for="username">{{ 'common.lbl-username' | translate }}:</label>
         <input type="text" class="form-control" id="username" required [(ngModel)]="username" name="username">
       </div>
     </div>
