--- a/frontend/src/app/features/settings/change-password/change-password.component.html
+++ b/frontend/src/app/features/settings/change-password/change-password.component.html
@@ -31,7 +31,10 @@
   }
 
   <div class="mt-2 text-end">
-    <p-button type="submit" label="{{ 'settings.change-pw.submit' | translate }}" size="small"
-              [disabled]="!passwordForm.valid" (onClick)="onSubmit()"/>
+    <p-button type="submit"
+              label="{{ 'common.btn-submit' | translate }}"
+              size="small"
+              [disabled]="!passwordForm.valid"
+              (onClick)="onSubmit()"/>
   </div>
 </form>
