--- a/frontend/src/app/core/login/login.component.html
+++ b/frontend/src/app/core/login/login.component.html
@@ -11,7 +11,7 @@
     </div>
     <div class="form-group row mb-3 justify-content-center">
       <div class="col-8 col-xs-8 col-sm-8 col-md-6 col-lg-4">
-        <label for="password">{{ 'login.lbl-password' | translate }}:</label>
+        <label for="password">{{ 'common.lbl-password' | translate }}:</label>
         <input type="password" class="form-control" id="password" required [(ngModel)]="password" name="password">
       </div>
     </div>
