--- a/frontend/src/app/shared/forms/user-form/user-form.component.html
+++ b/frontend/src/app/shared/forms/user-form/user-form.component.html
@@ -21,7 +21,7 @@
   </div>
 
   <div class="col-md-8">
-    <label for="password" class="form-label">{{ 'shared.forms.userForm.lbl-password' | translate }}</label>
+    <label for="password" class="form-label">{{ 'common.lbl-password' | translate }}</label>
     <input type="password" class="form-control" id="password" formControlName="password">
   </div>
 
