--- a/frontend/src/app/core/layout/header/header.component.html
+++ b/frontend/src/app/core/layout/header/header.component.html
@@ -19,7 +19,7 @@
         </li>
         <li class="nav-item">
           <a class="nav-link"
-             routerLink="/todo"
+             routerLink="/plag-scan"
              routerLinkActive="active">
             <i class="pi pi-shield"></i>
             {{ 'header.btn-plagscan' | translate }}
