[Feature/26] Degree Program Director Views

--- a/frontend/src/app/features/plag-scan/plag-scan.component.html
+++ b/frontend/src/app/features/plag-scan/plag-scan.component.html
@@ -20,7 +20,7 @@
   #fileUpload
   name="zipfile"
   [chooseLabel]="translationService.translate('plag-scan.choose')"
-  [cancelLabel]="translationService.translate('plag-scan.cancel')"
+  [cancelLabel]="translationService.translate('common.cancel')"
   [customUpload]="true"
   [showUploadButton]="selectedLanguage !== undefined"
   (uploadHandler)="onUpload()"
