--- a/frontend/src/app/features/home/admin-home/admin-home.component.html
+++ b/frontend/src/app/features/home/admin-home/admin-home.component.html
@@ -4,7 +4,7 @@
 <div class="row mt-3">
   <div class="col-5">
     <div class="border mt-2 p-2 rounded-2">
-      <ms-user-form [roleChoices]="userFormChoices"></ms-user-form>
+      <ms-user-form></ms-user-form>
     </div>
     <div class="border mt-2 p-2 rounded-2">
       <ms-degree-program-form></ms-degree-program-form>
