--- a/frontend/src/app/features/home/dpd-home/dpd-home.component.html
+++ b/frontend/src/app/features/home/dpd-home/dpd-home.component.html
@@ -1,11 +1,11 @@
 <div class="row">
   <ul class="list-group">
-    <li class="list-group-item active" aria-current="true">{{ 'home.dpdHome.programs' | translate }}</li>
+    <li class="list-group-item active border border-3 rounded-3" aria-current="true">{{ 'home.dpdHome.programs' | translate }}</li>
     @for (dp of degreePrograms; track dp) {
-      <li class="list-group-item d-flex justify-content-between align-items-center">
+      <li class="list-group-item d-flex justify-content-between align-items-center border border-3 rounded-3">
         <span class="fs-4">{{ dp.name }}</span>
         <p-button icon="pi pi-arrow-right"
-                  styleClass="p-button-warning"
+                  styleClass="p-button-secondary"
                   (click)="onDegreeProgramClick(dp)"
         ></p-button>
       </li>
@@ -13,10 +13,4 @@
       <li class="list-group-item">{{ 'home.dpdHome.empty' | translate }}</li>
     }
   </ul>
-</div>
-
-<div class="row mt-3">
-  <div class="border border-3 rounded-3 p-2">
-    <ms-user-form [roleChoices]="userFormChoices"></ms-user-form>
-  </div>
 </div>
