[Feature/26] Degree Program Director Views
+ assignment view

--- a/frontend/src/app/features/assignment/assignment-view/assignment-view.component.html
+++ b/frontend/src/app/features/assignment/assignment-view/assignment-view.component.html
@@ -1,1 +1,40 @@
-<p>assignment-view works!</p>
+<p-toast></p-toast>
+
+<h2>{{ 'assignment.title' | translate }} {{ assignmentBefore.name }}</h2>
+
+<p>{{ 'assignment.info' | translate }}</p>
+
+<div class="d-flex mt-5 gap-3">
+  <p-floatLabel>
+    <input id="name" type="text" pInputText [(ngModel)]="assignment.name"/>
+    <label for="name">{{ 'name' | translate }}</label>
+  </p-floatLabel>
+
+  <p-floatLabel>
+    <input id="number" type="number" pInputText [(ngModel)]="assignment.nr"/>
+    <label for="number">{{ 'number' | translate }}</label>
+  </p-floatLabel>
+
+  <p-floatLabel>
+    <input id="points" type="number" pInputText [(ngModel)]="assignment.points" readonly disabled/>
+    <label for="points">{{ 'assignment.points' | translate }}</label>
+  </p-floatLabel>
+</div>
+
+
+<div class="row mt-4">
+  <div class="col-6">
+    <h3>{{ 'assignment.draft' | translate }}</h3>
+    <json-editor [options]="editorOptions" [data]="shownDraft" (jsonChange)="getData($event)"></json-editor>
+
+    <div class="mt-3 text-center">
+      <p-button label="{{ 'common.btn-submit' | translate }}" (onClick)="onSubmit()"/>
+    </div>
+  </div>
+  <div class="col-6">
+    <h3>{{ 'assignment.example-draft' | translate }}</h3>
+    <json-editor [options]="editorOptions" [data]="exampleData"></json-editor>
+  </div>
+</div>
+
+
