--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,5 +1,7 @@
 @layer bootstrap-reboot, primeng;
 
+@import "jsoneditor/dist/jsoneditor.min.css";
+
 @import "bootstrap/dist/css/bootstrap.min.css" layer(bootstrap-reboot);
 @import "bootstrap/dist/css/bootstrap-reboot.css" layer(bootstrap-reboot);
 
